added some content about me

--- a/index.html
+++ b/index.html
@@ -1,12 +1,8 @@
 <!DOCTYPE HTML>
-<!--
-	Strata by HTML5 UP
-	html5up.net | @n33co
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
-		<title>Ibraheam's personal page</title>
+		<title>Ibraheam's personal pageu</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -18,7 +14,7 @@
 		<!-- Header -->
 			<header id="header">
 				<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-				<h1><strong>I am Ibraheam Alkhalifah</strong>, a Software Engineer<br />
+				<h1><strong>I am Ibraheam</strong>, a Software Engineer<br />
 				Who's passionate about technology<br />
 			</header>
 
@@ -30,7 +26,7 @@
 						<header class="major">
 							<h2>Ibraheam Al-Khalifah</h2>
 						</header>
-						<p>Hello there.</p>
+						<p>Hello there, Im passionste about big data, IoT and many more.</p>
 						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul>
@@ -107,7 +103,7 @@
 									</li>
 									<li>
 										<h3 class="icon fa-envelope-o"><span class="label">Email</span></h3>
-										<a href="#">ibrahim-alkhalifah@outlook.com</a>
+										<a href="#">iheemoo@gmail.com</a>
 									</li>
 								</ul>
 							</div>
@@ -439,10 +435,10 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 		<!-- Footer -->
 			<footer id="footer">
 				<ul class="icons">
-					<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-					<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-					<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+					<li><a href="https://twitter.com/iHeeMo" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+					<li><a href="https://github.com/iHeeMo" class="icon fa-github"><span class="label">Github</span></a></li>
+					<!--<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li> -->
+					<li><a href="iheemoo@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
 					<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
