--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<li><a href="iheemoo@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
-					<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+				<!--	<li>&copy; Untitled</li><li>Design: <a href="http://ana.net">ana webP</a></li> -->
 				</ul>
 			</footer>
 
