--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Ibraheam's personal pageu</title>
+		<title>Ibraheam's personal page</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -13,7 +13,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
+				<a href="#" class="image avatar"><img src="images/avatar.PNG" alt="" /></a>
 				<h1><strong>I am Ibraheam</strong>, a Software Engineer<br />
 				Who's passionate about technology<br />
 			</header>
