added new avatar

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="#" class="image avatar"><img src="images/avatar.PNG" alt="" /></a>
+				<a href="#" class="image avatar"><img src="images/avatar.png" alt="" /></a>
 				<h1><strong>I am Ibraheam</strong>, a Software Engineer<br />
 				Who's passionate about technology<br />
 			</header>
