--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Ibraheam Al-Khalifah</h2>
+							<h2>Vison</h2>
 						</header>
-						<p>Hello there, Im passionste about big data, IoT and many more.</p>
+						<p>I believe that software industry hides more than what we see at this time</p>
 
 						<!--
 						<ul class="actions">
