updated contact details

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 						<p>You can get in touch by sending an email for me</p>
 						<div class="row">
 							<div class="8u 12u$(small)">
-								<form method="post" action="#">
+								<form method="post" action="mailto:ibraheam@akwad.co">
 									<div class="row uniform 50%">
 										<div class="6u 12u$(xsmall)"><input type="text" name="name" id="name" placeholder="Name" /></div>
 										<div class="6u$ 12u$(xsmall)"><input type="email" name="email" id="email" placeholder="Email" /></div>
@@ -109,7 +109,7 @@
 									</li> -->
 									<li>
 										<h3 class="icon fa-envelope-o"><span class="label">Email</span></h3>
-										<a href="#">iheemoo@gmail.com</a>
+										<a href="#">ibraheam@akwad.co</a>
 									</li>
 								</ul>
 							</div>
@@ -441,8 +441,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 		<!-- Footer -->
 			<footer id="footer">
 				<ul class="icons">
-					<li><a href="https://twitter.com/iHeeMo" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="https://github.com/iHeeMo" class="icon fa-github"><span class="label">Github</span></a></li>
+					<li><a href="https://twitter.com/ibraheamkh" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+					<li><a href="https://github.com/ibraheamkh" class="icon fa-github"><span class="label">Github</span></a></li>
 					<!--<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li> -->
 					<li><a href="iheemoo@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 				</ul>
